--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "understanding-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha dist/test/test.js",
     "start": "nodemon dist/app.js"
   },
   "author": "",
@@ -16,8 +16,13 @@
     "nodemon": "^1.19.4"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.2",
-    "@types/node": "^12.12.9"
+    "@types/mocha": "^8.0.4",
+    "@types/node": "^12.12.9",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.2.1"
   }
 }
